增加视频剪切、转码、截图、水印
增加视频剪切、转码、截图、添加水印、视频转成GIF、图片合成视频

--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -41,4 +41,11 @@
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"/>
 
+    <ProgressBar
+        android:id="@+id/progress_audio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
 </RelativeLayout>
