FFmpeg本地推流直播
FFmpeg本地推流直播，ffplay客户端和web网页拉流播放

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,13 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/btn_media"/>
 
+    <Button
+        android:id="@+id/btn_push"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/video_push"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btn_video"/>
+
 </RelativeLayout>
