--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,28 @@
         android:text="@string/audio_handle"/>
 
     <Button
+        android:id="@+id/btn_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/video_handle"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btn_audio"/>
+
+    <Button
         android:id="@+id/btn_media"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/media_handle"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/btn_audio"/>
+        android:layout_below="@+id/btn_video"/>
 
     <Button
-        android:id="@+id/btn_video"
+        android:id="@+id/btn_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/video_handle"
+        android:text="@string/media_play"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/btn_media"/>
@@ -36,6 +45,15 @@
         android:text="@string/video_push"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/btn_video"/>
+        android:layout_below="@+id/btn_play"/>
+
+    <Button
+        android:id="@+id/btn_live"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/video_live"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btn_push"/>
 
 </RelativeLayout>
