增加音频编码：pcm编码成wav、aac
增加音频编码：pcm编码成wav、aac

--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/audio_transform"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="80dp"
         android:layout_centerHorizontal="true"/>
 
     <Button
@@ -63,6 +63,15 @@
         android:layout_height="wrap_content"
         android:text="@string/audio_opensl"
         android:layout_below="@+id/btn_play_audio"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:id="@+id/btn_audio_encode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/audio_encode"
+        android:layout_below="@+id/btn_play_opensl"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"/>
 
