--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -94,4 +94,13 @@
         android:layout_marginTop="10dp"
         android:text="@string/video_play"/>
 
+    <Button
+        android:id="@+id/btn_multi_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/btn_play_video"
+        android:layout_marginTop="10dp"
+        android:text="@string/video_multi"/>
+
 </RelativeLayout>
