增加设置静音开关、5s无操作后隐藏操作栏
增加设置静音开关、5s无操作后隐藏操作栏

--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -14,4 +14,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"/>
 
+    <ToggleButton
+        android:id="@+id/btn_sound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:textOff="@string/sound_close"
+        android:textOn="@string/sound_open"/>
+
 </RelativeLayout>
