--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -5,79 +5,6 @@
     android:layout_height="match_parent"
     tools:context="com.frank.ffmpeg.activity.VideoHandleActivity">
 
-    <Button
-        android:id="@+id/btn_video_transform"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_transform"/>
-
-    <Button
-        android:id="@+id/btn_video_cut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_video_transform"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_cut"/>
-
-    <Button
-        android:id="@+id/btn_video_concat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_video_cut"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_concat"
-        android:visibility="gone"/>
-
-    <Button
-        android:id="@+id/btn_screen_shot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_video_concat"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_screen_shot"/>
-
-    <Button
-        android:id="@+id/btn_water_mark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_screen_shot"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_water_mark"/>
-
-    <Button
-        android:id="@+id/btn_generate_gif"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_water_mark"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_to_gif"/>
-
-    <Button
-        android:id="@+id/btn_screen_record"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_generate_gif"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_screen_record"
-        android:visibility="gone"/>
-
-    <Button
-        android:id="@+id/btn_combine_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_screen_record"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_from_photo"/>
-
     <ProgressBar
         android:id="@+id/progress_video"
         android:layout_width="wrap_content"
@@ -85,40 +12,107 @@
         android:layout_centerInParent="true"
         android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/btn_play_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_combine_video"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_play"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/btn_video_transform"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_transform"/>
 
-    <Button
-        android:id="@+id/btn_multi_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_play_video"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_multi"/>
+            <Button
+                android:id="@+id/btn_video_cut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_cut"/>
 
-    <Button
-        android:id="@+id/btn_reverse_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_multi_video"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_reverse"/>
+            <Button
+                android:id="@+id/btn_video_concat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_concat"
+                android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/btn_denoise_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/btn_reverse_video"
-        android:layout_marginTop="10dp"
-        android:text="@string/video_denoise"/>
+            <Button
+                android:id="@+id/btn_screen_shot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_screen_shot"/>
+
+            <Button
+                android:id="@+id/btn_water_mark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_water_mark"/>
+
+            <Button
+                android:id="@+id/btn_generate_gif"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_to_gif"/>
+
+            <Button
+                android:id="@+id/btn_screen_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_screen_record"
+                android:visibility="gone"/>
+
+            <Button
+                android:id="@+id/btn_combine_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_from_photo"/>
+
+            <Button
+                android:id="@+id/btn_play_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_play"/>
+
+            <Button
+                android:id="@+id/btn_multi_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_multi"/>
+
+            <Button
+                android:id="@+id/btn_reverse_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_reverse"/>
+
+            <Button
+                android:id="@+id/btn_denoise_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_denoise"/>
+
+            <Button
+                android:id="@+id/btn_to_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/video_image"/>
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
