Activity基类增加选择文件
Activity基类增加选择文件，滤镜选择文件后自动播放

--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -23,4 +23,13 @@
         android:textOff="@string/sound_close"
         android:textOn="@string/sound_open"/>
 
+    <Button
+        android:id="@+id/btn_select_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/btn_sound"
+        android:layout_marginBottom="10dp"
+        android:text="@string/select_file" />
+
 </RelativeLayout>
