--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -3,43 +3,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".activity.AudioHandleActivity">
 
-    <Button
-        android:id="@+id/btn_transform"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layout_audio_handle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/audio_transform"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"/>
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <Button
+            android:id="@+id/btn_transform"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_transform"
+            android:layout_marginTop="40dp" />
 
-    <Button
-        android:id="@+id/btn_cut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_cut"
-        android:layout_below="@+id/btn_transform"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
+        <Button
+            android:id="@+id/btn_cut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_cut"
+            android:layout_marginTop="10dp" />
 
-    <Button
-        android:id="@+id/btn_concat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_concat"
-        android:layout_below="@+id/btn_cut"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
+        <Button
+            android:id="@+id/btn_concat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_concat"
+            android:layout_marginTop="10dp" />
 
-    <Button
-        android:id="@+id/btn_mix"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_mix"
-        android:layout_below="@+id/btn_concat"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
+        <Button
+            android:id="@+id/btn_mix"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_mix"
+            android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_play_audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_play"
+            android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_play_opensl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_opensl"
+            android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_audio_encode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_encode"
+            android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_pcm_concat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pcm_concat"
+            android:layout_marginTop="10dp" />
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progress_audio"
@@ -47,41 +74,5 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone"/>
-
-    <Button
-        android:id="@+id/btn_play_audio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_play"
-        android:layout_below="@+id/btn_mix"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:id="@+id/btn_play_opensl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_opensl"
-        android:layout_below="@+id/btn_play_audio"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:id="@+id/btn_audio_encode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/audio_encode"
-        android:layout_below="@+id/btn_play_opensl"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:id="@+id/btn_pcm_concat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pcm_concat"
-        android:layout_below="@+id/btn_audio_encode"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
