--- a/app/src/main/res/layout/activity_media_handle.xml
+++ b/app/src/main/res/layout/activity_media_handle.xml
@@ -5,31 +5,33 @@
     android:layout_height="match_parent"
     tools:context="com.frank.ffmpeg.activity.MediaHandleActivity">
 
-        <Button
-            android:id="@+id/btn_mux"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/layout_media_handle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="120dp"
-            android:text="@string/media_mux"/>
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+                <Button
+                    android:id="@+id/btn_mux"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="120dp"
+                    android:text="@string/media_mux"/>
 
-        <Button
-            android:id="@+id/btn_extract_audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/media_extra_audio"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/btn_mux"/>
+                <Button
+                    android:id="@+id/btn_extract_audio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/media_extra_audio"
+                    android:layout_marginTop="10dp" />
 
-        <Button
-            android:id="@+id/btn_extract_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/media_extract_video"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/btn_extract_audio"/>
+                <Button
+                    android:id="@+id/btn_extract_video"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/media_extract_video"
+                    android:layout_marginTop="10dp" />
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progress_media"
