--- a/app/src/main/res/layout/activity_push.xml
+++ b/app/src/main/res/layout/activity_push.xml
@@ -9,7 +9,7 @@
         android:id="@+id/edit_file_path"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1"
+        android:maxLines="3"
         android:minWidth="200dp"
         android:layout_centerInParent="true"/>
 
@@ -18,7 +18,7 @@
         android:id="@+id/edit_live_url"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="1"
+        android:maxLines="3"
         android:minWidth="200dp"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/edit_file_path"/>
@@ -27,8 +27,8 @@
         android:id="@+id/btn_push_stream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/edit_live_url"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
         android:text="@string/video_push"/>
 
