--- a/app/src/main/res/layout/activity_video_reverse.xml
+++ b/app/src/main/res/layout/activity_video_reverse.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.frank.ffmpeg.activity.VideoReverseActivity"
-    android:orientation="horizontal">
-
-    <VideoView
-        android:id="@+id/video_normal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginEnd="10dp"
-        android:visibility="invisible"/>
+    tools:context="com.frank.ffmpeg.activity.VideoReverseActivity">
 
     <LinearLayout
         android:id="@+id/layout_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
         <ProgressBar
             android:layout_width="wrap_content"
@@ -28,17 +19,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="视频转换中..."
+            android:text="@string/converting_video"
             android:textColor="@color/colorPrimary"
-            android:textSize="18dp"/>
+            android:textSize="18sp"/>
     </LinearLayout>
 
     <VideoView
         android:id="@+id/video_reverse"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginStart="10dp"
-        android:visibility="invisible"/>
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
-</LinearLayout>
+</RelativeLayout>
