--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -92,7 +92,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/video_reverse"/>
+                android:text="@string/video_reverse"
+                android:visibility="gone"/>
 
             <Button
                 android:id="@+id/btn_denoise_video"
