--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -116,6 +116,13 @@
                 android:layout_marginTop="4dp"
                 android:text="@string/video_pip"/>
 
+            <Button
+                android:id="@+id/btn_moov"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/video_moov"/>
+
         </LinearLayout>
     </ScrollView>
 
