RTMP直播推流:更新为Camera2预览，暂时去掉音频推流
RTMP直播推流:更新为Camera2预览，暂时去掉音频推流

--- a/Live/src/main/res/layout/activity_rtmp_live.xml
+++ b/Live/src/main/res/layout/activity_rtmp_live.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.frank.live.LiveActivity">
+    tools:context="com.frank.live.RtmpLiveActivity">
 
-    <SurfaceView
+    <TextureView
         android:id="@+id/surface_camera"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
