use ffprobe to parse media format
use ffprobe to parse media format

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,13 @@
                 android:text="@string/video_preview"
                 android:layout_marginTop="10dp" />
 
+            <Button
+                android:id="@+id/btn_probe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/media_probe"
+                android:layout_marginTop="10dp" />
+
         </LinearLayout>
     </ScrollView>
 
