show media format data
show media format data

--- a/app/src/main/res/layout/activity_probe.xml
+++ b/app/src/main/res/layout/activity_probe.xml
@@ -21,6 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
             android:layout_below="@+id/btn_probe_format"
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
