--- a/app/src/main/res/drawable/btn_circle.xml
+++ b/app/src/main/res/drawable/btn_circle.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--空心圆角矩形  -->
+<!--空心圆角rectangle  -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <corners android:radius="30dp" /><!-- 圆角半径 -->
     <stroke
         android:width="1dp"
-        android:color="@color/colorBord" /><!--矩形的边线  -->
+        android:color="@color/colorBord" /><!--rectangle的边线  -->
     <size
         android:height="60dp"
-        android:width="60dp" /><!--矩形的宽高  -->
+        android:width="60dp" /><!--rectangle的宽高  -->
 </shape>
