--- a/app/src/main/res/drawable/btn_point.xml
+++ b/app/src/main/res/drawable/btn_point.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--空心圆角矩形  -->
+<!--空心圆角rectangle  -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <corners android:radius="20dp" /><!-- 圆角半径 -->
     <size
         android:height="40dp"
-        android:width="40dp" /><!--矩形的宽高  -->
+        android:width="40dp" /><!--rectangle的宽高  -->
     <gradient
         android:endColor="@color/redBtn"
-        android:startColor="@color/redBtn" /><!-- 矩形的内部颜色，这里设置成白色，即空心 -->
+        android:startColor="@color/redBtn" /><!-- rectangle的内部颜色，这里设置成白色，即空心 -->
 </shape>
