add cmd: joint video together
joint video together

--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -117,6 +117,13 @@
                 android:text="@string/video_pip"/>
 
             <Button
+                android:id="@+id/btn_joint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/video_joint"/>
+
+            <Button
                 android:id="@+id/btn_moov"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
