show progress of video transformation
show progress of video transformation

--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     tools:context="com.frank.ffmpeg.activity.VideoHandleActivity">
 
-    <ProgressBar
-        android:id="@+id/progress_video"
+    <include
+        layout="@layout/item_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:layout_centerInParent="true"/>
 
     <ScrollView
         android:layout_width="match_parent"
