--- a/app/src/main/res/layout/activity_video_handle.xml
+++ b/app/src/main/res/layout/activity_video_handle.xml
@@ -128,6 +128,13 @@
                 android:layout_marginTop="4dp"
                 android:text="@string/video_speed"/>
 
+            <Button
+                android:id="@+id/btn_flv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/video_flv"/>
+
         </LinearLayout>
     </ScrollView>
 
