--- a/app/src/main/res/layout/activity_audio_handle.xml
+++ b/app/src/main/res/layout/activity_audio_handle.xml
@@ -66,6 +66,14 @@
             android:layout_height="wrap_content"
             android:text="@string/pcm_concat"
             android:layout_marginTop="10dp" />
+
+        <Button
+            android:id="@+id/btn_audio_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/audio_speed"
+            android:layout_marginTop="10dp" />
+
     </LinearLayout>
 
     <include
