add dubbing:add another audio to video
add dubbing:add another audio to video

--- a/app/src/main/res/layout/activity_media_handle.xml
+++ b/app/src/main/res/layout/activity_media_handle.xml
@@ -31,6 +31,13 @@
                     android:layout_height="wrap_content"
                     android:text="@string/media_extract_video"
                     android:layout_marginTop="10dp" />
+
+                <Button
+                    android:id="@+id/btn_dubbing"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/media_dubbing"
+                    android:layout_marginTop="10dp" />
         </LinearLayout>
 
         <include
